--- a/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
+++ b/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
@@ -3,26 +3,27 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<link href="~/Content/DataTables/css/jquery.dataTables.min.css" rel="stylesheet" />
-<link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
-<link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
 
-<link href="~/css/style.css" rel="stylesheet" />
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="~/css/bootstrap.min.css" />
-<!-- themefy CSS -->
-<link rel="stylesheet" href="~/vendors/themefy_icon/themify-icons.css" />
+<link rel="stylesheet" href="../css/bootstrap.min.css" />
 
-<!-- font awesome CSS -->
-<link rel="stylesheet" href="~/vendors/font_awesome/css/all.min.css" />
-<link rel="stylesheet" href="~/vendors/tagsinput/tagsinput.css" />
-
-<!-- menu css  -->
-<link rel="stylesheet" href="~/css/metisMenu.css">
 <!-- style CSS -->
-<link rel="stylesheet" href="~/css/colors/default.css" id="colorSkinCSS">
-<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+<link rel="stylesheet" href="../css/style.css" />
+<link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
+
+<link rel="stylesheet" href="../css/datatable/css/jquery.dataTables.min.css" />
+<link rel="stylesheet" href="../css/datatable/css/responsive.dataTables.min.css" />
+<link rel="stylesheet" href="../css/datatable/css/buttons.dataTables.min.css" />
+
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+
+<script src="~/Scripts/jquery-ui.js"></script>
+
+<script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+<script src="~/Scripts/DataTables/dataTables.select.min.js"></script>
+
 
 <script src="~/Scripts/CreateNewUserAccount.js"></script>
 <style>
@@ -62,8 +63,8 @@
                             <div class="modal-dialog" style="width: 100%; margin: 0 auto">
                                 <div class=" modal-content" style="margin: 0 auto; border: none; box-shadow: none;">
                                     @*<div class="modal-header">
-                                    <h4 class="modal-title" id="myModalLabel">Create New User Account</h4>
-                                </div>*@
+                                            <h4 class="modal-title" id="myModalLabel">Create New User Account</h4>
+                                        </div>*@
                                     <input id="hdnID" type="hidden" />
                                     <div class="modal-body">
                                         <form>
@@ -86,9 +87,9 @@
                                                 @Html.DropDownListFor(model => model.GroupID, (IEnumerable<SelectListItem>)ViewBag.Groups, "Select Group", new { @class = "form-control", @id = "ddlgrp" })
                                             </div>
                                             <div class="form-group">
-                                                <label for="selectCrew" class="control-label">Select Crew</label><br />
-                                                <input type="text" class="form-control" id="CrewName" disabled="disabled" />
-                                                @*@Html.DropDownListFor(model => model.CrewID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })*@
+                                                <label for="selectCrew" class="control-label">Crew</label><br />
+                                                @*<input type="text" class="form-control" id="CrewName" disabled="disabled" />*@
+                                                @Html.DropDownListFor(model => model.CrewID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "CrewName", disabled = "disabled" })
 
                                             </div>
                                             <div class="form-group">
@@ -105,15 +106,15 @@
                         </div>
                     </div>
                     @*<div class="col-md-6">
-                    <table id="Mastertable" class="display" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th>Username</th>
-                                <th>Active</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>*@
+                            <table id="Mastertable" class="display" style="width:100%">
+                                <thead>
+                                    <tr>
+                                        <th>Username</th>
+                                        <th>Active</th>
+                                    </tr>
+                                </thead>
+                            </table>
+                        </div>*@
                 </div>
 
 
@@ -121,25 +122,6 @@
 
             @section Scripts
 {
-                @Scripts.Render("~/bundles/jqueryval")
-                @Styles.Render("~/Content/themes/base/css")
-                @Scripts.Render("~/bundles/jqueryui")
-                <script src="~/js/jquery-3.6.0.min.js"></script>
-                <!-- bootstarp js -->
-                <script src="~/js/bootstrap.min.js"></script>
-                <!-- sidebar menu  -->
-                <script src="~/js/metisMenu.js"></script>
-
-                <!-- custom js -->
-                <script src="~/js/dashboard_init.js"></script>
-                <script src="~/js/custom.js"></script>
-                <script src="~/Scripts/DataTables/dataTables.select.min.js"></script>
-                <script src="~/Scripts/DataTables/dataTables.rowReorder.min.js"></script>
-
-                <script src="~/Scripts/toastr.min.js"></script>
-                <link href="~/Content/toastr.min.css" rel="stylesheet" />
-             
-
                 <script type="text/javascript">
 
                     // var saveurl = $('#Save').val();
@@ -147,9 +129,9 @@
 
                     $(document).ready(function () {
 
+                        LoadInitialData();
 
                         SetUpGrid();
-
 
 
                         var orderCount = 0;
