--- a/TM.RestHour/Views/Shared/_pvMedicalAdvise.cshtml
+++ b/TM.RestHour/Views/Shared/_pvMedicalAdvise.cshtml
@@ -113,8 +113,8 @@
                         <td><input type="text" class="form-control" id="ExaminationName" name="ExaminationName" placeholder="Examination Name" /></td>
                         <td >
                             <input type="hidden" class="form-control" id="hdnExaminationFilePath" name="hdnExaminationFilePath" />
-                            <button type="button" class="button1" id="" name="DeleteRow" disabled>View</button>
-                            <button type="button" class="button1" id="" name="DeleteRow" disabled>Attach</button>
+                            <button type="button" class="button1" id="" name="DeleteRow" disabled>@*View*@ <i class="fa fa-eye" style="color:#4ff339" aria-hidden="true"></i></button>
+                            <button type="button" class="button1" id="" name="DeleteRow" disabled>@*Attach*@ <i class="fa fa-paperclip" style="color:#4ff339" aria-hidden="true"></i></button>
                         </td>
                     </tr>
                 </tbody>
