--- a/TM.RestHour/Views/WellBeing/WellBeingHealth.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingHealth.cshtml
@@ -32,7 +32,7 @@
     }
 </style>
 
-<h2>WellBeingHealth</h2>
+<h2>Health</h2>
 <div class="well-table card">
     <table id="tblWellBeingHealth" class="table table-bordered table-hover">
         <thead class="thead-dark">
