--- a/TM.RestHour/Views/WellBeing/WellBeingMentalHealth.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingMentalHealth.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/jquery-3.6.0.min.js"></script>
-<h2>WellBeingMentalHealth</h2>
+<h2>Mental Health</h2>
 <div class="well-table">
     <table class="table table-bordered table-hover">
         <thead class="thead-dark">
