01-04-2022 resthoursclient Full script

--- a/TM.RestHour/Views/Home/UserDashboard.cshtml
+++ b/TM.RestHour/Views/Home/UserDashboard.cshtml
@@ -14,7 +14,7 @@
     <div class="col-12">
         <div class="banner_Box">
             <div class="box_Area">
-                <a href="@Url.Action("Index", "Health" )" style="border:none;">
+                <a href="@Url.Action("ReportDailyTemperature", "CrewHealth" )" style="border:none;">
                     <div class="pull-left mr-20 mobileBox">
                         <div class="blue_Color color_box">
                             <img src="../img/menu-icon/health.png" />
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="@Url.Action("WorkAndRestHours", "Health" )" style="border:none;">
+                <a href="@Url.Action("CrewTimeSheet", "TimeSheet" )" style="border:none;">
                     <div class="pull-left mr-20 mobileBox">
                         <div class="pink_Color color_box">
                             <img src="../img/menu-icon/Work_icon.png" />
