--- a/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
+++ b/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
@@ -28,11 +28,13 @@
 
 
 <div class="">
-    
+    <div class="head_title arrowimg">
+        <a href="@Url.Action("UserDashboard", "Home" )"><span class="title-arrow"><img src="../img/arrow.png" /></span></a> <img src="../img/brein.png" />  <h1 style=" font-size: 1.5rem;">Health </h1>
+    </div>
     <div class="white_card_header">
         <div class="box_header m-0">
             <div class="main-title">
-                <h2 class="mrBTM-10">Crew Temperature Report</h2>
+                <h2 class="mrBTM-10"></h2>
             </div>
         </div>
     </div>
@@ -92,11 +94,11 @@
                                         <div class="form-group  mrTP-30">
                                             <div class="pull-right">
                                                 @*<div class="pull-right" id="sideform">
-                                                <button type="button" class="btn btn-info mrRHT-10" id="ShowReportForAll"><i class="ti-eye"></i> Show For All</button>
-                                            </div>*@
+                                                        <button type="button" class="btn btn-info mrRHT-10" id="ShowReportForAll"><i class="ti-eye"></i> Show For All</button>
+                                                    </div>*@
                                                 @*<div class="pull-right" id="sideform">
-                                                <button type="button" class="btn btn-primary mrRHT-10" id="btnPrintForAll"><i class="ti-printer"></i> Print For All</button>
-                                            </div>*@
+                                                        <button type="button" class="btn btn-primary mrRHT-10" id="btnPrintForAll"><i class="ti-printer"></i> Print For All</button>
+                                                    </div>*@
                                                 <div class="clearfix"></div>
                                             </div>
                                             <div class="pull-right">
@@ -108,8 +110,8 @@
                                                 </div>
 
                                                 @*<div class="pull-right" id="sideform">
-                                                <button type="button" class="btn btn-primary mrRHT-10" id="btnPrint"><i class="ti-printer"></i> Print Report</button>
-                                            </div>*@
+                                                        <button type="button" class="btn btn-primary mrRHT-10" id="btnPrint"><i class="ti-printer"></i> Print Report</button>
+                                                    </div>*@
                                                 <div class="clearfix"></div>
                                             </div>
                                             <div class="clearfix"></div>
