--- a/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
+++ b/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
@@ -234,7 +234,7 @@
                             <button type="submit" class="btn btn-danger pull-right" id="btnClose" onclick="return CloseCrew();" Close>Clear</button>
                         }
                         <button type="button" class="btn btn-primary pull-right mrRHT-10" id="btnAdd" onclick="return AddCrew();">Add / Update Crew</button>
-                        <button type="button" class="btn btn-info pull-right mrRHT-10" id="btnAdd1" onclick="return AddCrewEdit();" style="display:;">More Settings</button>
+                        @*<button type="button" class="btn btn-info pull-right mrRHT-10" id="btnAdd1" onclick="return AddCrewEdit();" style="display:;">More Settings</button>*@
                     </div>
                 </div>
             </div>
